add parallax, start extend home page

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Dustin Milotte",
   "license": "MIT",
   "dependencies": {
-    "node-sass": "^4.11.0"
+    "node-sass": "^4.11.0",
+    "rellax": "^1.7.2"
   }
 }
