--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "portfolio site",
   "main": "index.js",
+  "homepage": "https://DustinMilotte.github.io/responsive_portfolio",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
+    "deploy": "gh-pages -d dist"
   },
   "author": "Dustin Milotte",
   "license": "MIT",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "moveto": "^1.8.0",
     "node-sass": "^4.11.0",
     "rellax": "^1.7.2"
